--- a/views/login.html
+++ b/views/login.html
@@ -39,20 +39,18 @@ rel="stylesheet" />
 
         <nav>
             <div class="main-navbar">
-                <div class="n-left">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a href="#">Ofertas</a></li>
-                        <li class="nav-item"><a href="#">Tiendas Oficiales</a></li>
-                        <li class="nav-item"><a href="#">Vender</a></li>
-                        <li class="nav-item"><a href="#">Ayuda</a></li>
-                    </ul>
+                <ul class="left-navbar">
+                    <li class="nav-item"><a href="#">Ofertas</a></li>
+                    <li class="nav-item"><a href="#">Tiendas Oficiales</a></li>
+                    <li class="nav-item"><a href="#">Vender</a></li>
+                    <li class="nav-item"><a href="#">Ayuda</a></li>
+                </ul>
 
-                    <ul class="n-right">
-                        <li class="nav-item"><a href="#">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
-                        <li class="nav-item"><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
-                        <li class="nav-item"><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
-                    </ul>
-                </div>
+                <ul class="right-navbar">
+                    <li class="nav-item"><a href="#">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+                    <li class="nav-item"><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                    <li class="nav-item"><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
+                </ul>
             </div>
         </nav>
 
@@ -85,7 +83,7 @@ rel="stylesheet" />
     <footer>
         <div class="footer-content product-article">
             <article>
-                <i class="fas fa-credit-card ml-azul"></i>
+                <i class="fas fa-credit-card blue-symbol"></i>
                 <h3>Pagá con tarjeta de crédito</h3>
                 <p>
                     Con MercadoLiebreCash tenés cuotas si interés con tarjeta o efectivo
@@ -93,7 +91,7 @@ rel="stylesheet" />
                 </p>
             </article>
             <article>
-                <i class="fas fa-gift ml-azul"></i>
+                <i class="fas fa-gift blue-symbol"></i>
                 <h3>Envío gratis desde los $2.500</h3>
                 <p>
                     Sólo por estar registrad@ en MercadoLiebre tenés envíos gratis en
@@ -101,7 +99,7 @@ rel="stylesheet" />
                 </p>
             </article>
             <article>
-                <i class="fas fa-user-shield ml-azul"></i>
+                <i class="fas fa-user-shield blue-symbol"></i>
                 <h3>Seguridad de principio a fin</h3>
                 <p>
                     ¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas
